--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ font-family: 'Montserrat', sans-serif; */
         <div class="mt-5 bg-white flex flex-col md:flex-row w-[90%] gap-y-4 md:w-[50%]  rounded-3xl overflow-hidden mb-5">
             <div class="w-full md:w-1/2 ">
                 <img src="/images/image-product-desktop.jpg" alt="image" class="w-full hidden md:block rounded-l-3xl h-full object-cover">
-                <img src="/images/image-product-mobile.jpg" al="image" class="md:hidden rounded-t-3xl">
+                <img src="/images/image-product-mobile.jpg" alt="image" class="md:hidden rounded-t-3xl">
             </div>
             <div class="w-full md:w-1/2 p-4 self-center">
                 <p class="tracking-[4px] text-[#6c7289] text-[14px] leading-[110%]">PERFUME </p>
@@ -49,11 +49,11 @@ font-family: 'Montserrat', sans-serif; */
                         $149.99</h2>
                     <p class="text-[#6c7289] "><strike>$169.99</strike></p>
                 </div>
-                <buton
+                <button
                     class="font-medium mt-4 md:mt-8 text-white bg-[#3c8067] w-full p-3 flex justify-center gap-x-2 rounded-md items-center hover:bg-[#1c232b] cursor-pointer transition-all ease-in-out duration-300">
                     <img src="/images/icon-cart.svg" alt="cart" class="">
                     <span>Add to Cart</span>
-                </buton>
+                </button>
             </div>
         </div>
     </div>
